--- a/index.html
+++ b/index.html
@@ -112,15 +112,12 @@
                     <div class="col-md-6 d-none d-sm-block">
                         <div class="social-icons social-icons-colored-hover">
                             <ul>
-                                <li class="social-facebook"><a href="#"><i class="fab fa-facebook-f"></i></a></li>
-                                <li class="social-twitter"><a href="#"><i class="fab fa-twitter"></i></a></li>
-                                <li class="social-google"><a href="#"><i class="fab fa-google-plus-g"></i></a></li>
-                                <li class="social-pinterest"><a href="#"><i class="fab fa-pinterest"></i></a></li>
-                                <li class="social-vimeo"><a href="#"><i class="fab fa-vimeo"></i></a></li>
+                                <li class="social-facebook"><a href="https://www.facebook.com/fastturtlesnet/"><i class="fab fa-facebook-f"></i></a></li>
+                                <li class="social-twitter"><a href="https://twitter.com/fastturtlesnet"><i class="fab fa-twitter"></i></a></li>
                                 <li class="social-linkedin"><a href="#"><i class="fab fa-linkedin"></i></a></li>
-                                <li class="social-dribbble"><a href="#"><i class="fab fa-dribbble"></i></a></li>
-                                <li class="social-youtube"><a href="#"><i class="fab fa-youtube"></i></a></li>
-                                <li class="social-rss"><a href="#"><i class="fa fa-rss"></i></a></li>
+                                <li class="social-youtube"><a href="https://www.youtube.com/channel/UC_hRoORCUJ7o_ZU5tDLtLxQ/featured"><i class="fab fa-youtube"></i></a></li>
+                                <li class="social-youtube"><a href="https://www.instagram.com/fastturtlesnet/"><i class="fab fa-instagram"></i></a></li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -155,16 +152,7 @@
                             <li>
                                 <a id="btn-search" href="#"> <i class="icon-search"></i></a>
                             </li>
-                            <li>
-                                <div class="p-dropdown">
-                                    <a href="#"><i class="icon-globe"></i><span>EN</span></a>
-                                    <ul class="p-dropdown-content">
-                                        <li><a href="#">French</a></li>
-                                        <li><a href="#">Spanish</a></li>
-                                        <li><a href="#">English</a></li>
-                                    </ul>
-                                </div>
-                            </li>
+                            
                         </ul>
                     </div>
                     <!--end: Header Extras-->
